Updated index.html and added contact.html

--- a/static/index.html
+++ b/static/index.html
@@ -13,6 +13,7 @@
         <button onclick="translateText()">Translate</button>
         <div id="result" aria-live="polite"></div>
     </div>
+    <a href="contact.html" style="position: absolute; bottom: 20px; left: 20px; color: #A389FF; text-decoration: none; font-size: 16px; font-weight: 500; transition: color 0.3s ease;">Contact Us</a>
     <script src="/static/script.js"></script>
 </body>
 </html>
